--- a/less/global.less
+++ b/less/global.less
@@ -17,22 +17,48 @@ h1, h2, h3, h4, h5 {
   color: @header-font-color;
 }
 
+h1 {
+  font-size: 3.6rem;
+
+  @media @mobile {
+    font-size: 3rem;
+  }
+}
+
 h2 {
-  font-size: 3.2rem;
+  font-size: 3rem;
+  
+  @media @mobile {
+    font-size:2.6rem; 
+  }
+
 }
 
 h3 {
   font-size: 2.8rem;
+
+  @media @mobile {
+    font-size:2.2rem; 
+  }
+
 }
 
 p {
   font-size: 1.6rem;
   line-height: 1.4;
+
+  @media @mobile {
+    font-size:1.4rem; 
+  }
+
 }
 
 .container {
   max-width: 800px;
   width: 100%;
-  margin: 0 auto;  
+  margin: 0 auto; 
+  
+  @media @mobile {
+    max-width:100%;
+  }
 }
-
