--- a/less/home-page.less
+++ b/less/home-page.less
@@ -11,6 +11,10 @@
     p {
       padding:0 15px;
     }
+    img {
+      max-width: 100%;
+      border-radius: 5px;
+    }
   
   }
 
@@ -19,13 +23,29 @@
     flex-wrap: wrap;
     width: 100%;
 
+    @media @mobile {
+
+      img:nth-of-type(2) , img:nth-of-type(3) {
+        display: none;
+      }
+
+    }
+
     img {
       width: 28%;
       margin: 20px 2.5%;
       border-radius: 20px;
       height: 100%;
+
+      @media @mobile {
+        width:94%;
+
+      }
     }
+
   }
+
+
 
   .visit-planets {
     padding: 15px;
@@ -46,6 +66,12 @@
     display: flex;
     justify-content: center;
 
+    @media @mobile {
+      flex-direction: column-reverse;
+      padding: 10px;
+      margin-top: 15px;
+    }
+
     .walk-text {
       width: 50%;
 
@@ -57,13 +83,42 @@
         margin-bottom: 26px;
       }
 
-      .btn {
+      .btn button {
+        color: @wild-sand;
+        background: @btn-bg-color;
+        width: 75px;
+        height: 27px;
+        border:  none;
+        border-radius: 5PX;
+        font-family: 'Ubuntu', sans-serif;
+        font-size: 1.4rem;
+
+
+        @media @mobile {
+          width: 100%;
+          height: 50px;
+          font-size: 1.9rem;
+        }
+
       }
+
+      @media @mobile {
+        width: 100%;
+      }
+
     }
+
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media @mobile {
+        margin-left: 0;
+        width: 100%;
+        margin: 0 auto;
+        margin-bottom: 20px;
+      }
       
       img {
         width: 100%;
